plugins {
  id 'java-library'
  id 'groovy'
}

group 'com.kontomatik'
version '1.0-SNAPSHOT'
sourceCompatibility = JavaVersion.VERSION_17

repositories {
  mavenCentral()
}

dependencies {
  implementation 'org.slf4j:slf4j-api:2.0.6'
  implementation('org.apache.httpcomponents:httpclient:4.5.14') {
    exclude group: 'commons-logging', module: 'commons-logging'
  }
  implementation 'org.slf4j:slf4j-simple:2.0.6'
  implementation 'org.slf4j:jcl-over-slf4j:2.0.6'
  implementation 'com.google.code.gson:gson:2.10.1'

  testImplementation platform('org.apache.groovy:groovy-bom:4.0.5')
  testImplementation 'org.apache.groovy:groovy'
  testImplementation 'org.apache.groovy:groovy-json'
  testImplementation platform('org.spockframework:spock-bom:2.3-groovy-4.0')
  testImplementation 'org.spockframework:spock-core'
  testImplementation "com.github.tomakehurst:wiremock-jre8:2.35.0"
}

test {
  useJUnitPlatform()
  jvmArgs(['--enable-preview'])
}

tasks.withType(JavaCompile).each {
  it.options.compilerArgs.add('--enable-preview')
}

sourceSets {
  manualTest {
    java {
      compileClasspath += main.output + test.output
      runtimeClasspath += main.output + test.output
      srcDir "$projectDir/src/testManual/groovy"
    }
    resources.srcDir "$projectDir/src/testManual/resources"
  }
}

configurations {
  manualTestImplementation.extendsFrom testImplementation
}
